# ANCHOR

./: .gitignore  README.md  pyproject.toml
anchor/: __init__.py  _runner.py  builder.py  config.py  data.py  experiment.py  markers.py  output.py  protein.py  rho.py  safety.py  selection.py
anchor/partial/: __init__.py  labels.py  metrics.py  model.py  module.py  pseudolabels.py
anchor/student/: __init__.py  anchors.py  bundle.py  evaluation.py  losses.py  model.py  training.py
anchor/teacher/: __init__.py  hard_sampling.py  model.py  module.py  pseudolabels.py  training.py
docs/: VERSION_POLICY.md
examples/: run_anchor_basic.py  run_student_only.py
reproduce/: README.md
reproduce/bm_abseq/: README.md  data_manifest.json  run_anchor_v1.py  run_anchor_v2.py  run_student_v1.py  run_student_v2.py
reproduce/bmmc_full_mode/: README.md  data_manifest.json  run_anchor_v1.py  run_anchor_v2.py  run_student_v1.py  run_student_v2.py
reproduce/bmmc_partial_label_mode/: README.md  data_manifest.json  run_anchor_v1.py  run_anchor_v2.py  run_student_v1.py  run_student_v2.py
reproduce/marrowatlas/: README.md  data_manifest.json  run_anchor_v1.py  run_anchor_v2.py  run_student_v1.py  run_student_v2.py
reproduce/pbmc/: README.md  data_manifest.json  run_anchor_v1.py  run_anchor_v2.py  run_student_v1.py  run_student_v2.py
reproduce/simulation/: README.md  generate_inputs.py
reproduce/simulation_full_mode/: README.md  data_manifest.json  generate_inputs.py  run_anchor_v1.py  run_anchor_v2.py  run_student_v1.py  run_student_v2.py
(+28 files in other folders)
